# wind

./: .gitignore  LICENSE  README.md  enrich_windparks.py  evaluate.ipynb  explore.ipynb  forecast.ipynb  forecast.py  local_windpower_dataset.py  local_windpower_pred.py  model.py  pred_local_windpower.py  pyproject.toml  reshape_data.py  submission.ipynb  time_series_forecast.py  train.py  tune_local_windpower.py  tuning.py
data/: windparks_enriched.csv
notebooks/: bayesian_inference.ipynb  consolidate_windparks.ipynb  evaluate.ipynb  evaluate_nn.ipynb  explore.ipynb  timeseries.ipynb
src/wind/evaluate/: evaluate_models.py  station_loo_benchmark.py
src/wind/model/: model.py  pred_area_bayesian.py  pred_area_windpower.py  pred_local_windpower.py  tabular_models.py  timeseries.py  train.py  tune_area_windpower.py  tune_local_windpower.py
src/wind/preprocess/: enrich_windparks.py  prepare_area_data.py  prepare_area_ensemble_data.py  prepare_data.py  prepare_ensemble_data.py  prepare_local_data.py  prepare_single_model_data.py  reshape_data.py  time_series_data.py
