[project]
name = "wind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "plotly>=6.2.0",
    "polars>=1.32.1",
    "ruff>=0.12.7",
    "scipy>=1.16.1",
    "xarray>=2025.7.1",
]

[tool.ruff]
extend-include = ["*.ipynb"]
