[project]
name = "wind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cf-xarray>=0.10.7",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "plotly>=6.2.0",
    "polars>=1.32.1",
    "pyarrow>=21.0.0",
    "ruff>=0.12.7",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "statsforecast>=2.0.1",
    "statsmodels>=0.14.5",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "xarray>=2025.7.1",
    "zarr>=3.1.1",
]

[tool.ruff]
extend-include = ["*.ipynb"]
